# hofmann

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: animations.rst  api.rst  changelog.rst  citing.rst  colouring.rst  conf.py  getting-started.rst  index.rst  interactive.rst  legends.rst  make.bat  partial_occupancy.rst  rendering.rst  scenes.rst  styles.rst  user-guide.rst  xbs-format.rst
docs/_static/: ch4_md.traj  custom.css  generate_images.py  srtio3_hot_filtered.traj  srtio3_md.traj
examples/: Li7La3Zr2O12.cif  Zr4S12N8H24.vasp  check_alpha.py  demo.py  disordered_site.cif  generate_ch4_trajectory.py  generate_srtio3_trajectory.py  perovskite.py  render_ch4_animation.py  render_srtio3_animation.py  srtio3.cif  srtio3_tilt_colouring.py
src/hofmann/: __init__.py  _constants.py  bonds.py  defaults.py  model.py  parser.py  polyhedra.py  render_mpl.py  render_plotly.py  scene.py  styles.py
src/hofmann/construction/: __init__.py  bonds.py  defaults.py  polyhedra.py  rendering_set.py  scene_builders.py
src/hofmann/data/: vesta_cutoffs.json
src/hofmann/model/: __init__.py  _util.py  atom_data.py  atom_style.py  bond_spec.py  colour.py  composition.py  frame.py  polyhedron_spec.py  render_style.py  structure_scene.py  view_state.py
src/hofmann/rendering/: __init__.py  _legend_polyhedra.py  _widget_scale.py  animation.py  axes_widget.py  bond_geometry.py  cell_edges.py  interactive.py  legend.py  painter.py  precompute.py  projection.py  static.py
tests/: conftest.py  test_bonds.py  test_defaults.py  test_init.py  test_model.py  test_parser.py  test_polyhedra.py  test_render_mpl.py  test_render_plotly.py  test_scene.py  test_styles.py
tests/fixtures/: ch4.bs  ch4.mv
tests/test_construction/: test_bonds.py  test_defaults.py  test_parser.py  test_pipeline_stages.py  test_polyhedra.py  test_rendering_set.py  test_scene_builders.py  test_styles.py
tests/test_model/: test_atom_data.py  test_atom_style.py  test_bond_spec.py  test_colour.py  test_composition.py  test_frame.py  test_polyhedron_spec.py  test_render_style.py  test_structure_scene.py  test_util.py  test_view_state.py
tests/test_rendering/: test_animation.py  test_bond_geometry.py  test_cell_edges.py  test_interactive.py  test_legend.py  test_legend_polyhedra.py  test_painter.py  test_precompute.py  test_projection.py  test_static.py
