[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hofmann"
version = "0.1.0"
description = "A modern Python reimagining of the XBS ball-and-stick crystal structure viewer"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
interactive = ["plotly>=5.0", "ipywidgets>=8.0"]
pymatgen = ["pymatgen>=2024.1.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = ["hofmann[interactive,pymatgen,dev]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
