[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hofmann"
version = "0.1.0"
description = "A modern Python reimagining of the XBS ball-and-stick crystal structure viewer"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
pymatgen = ["pymatgen>=2024.1.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
all = ["hofmann[pymatgen,dev,docs]"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
