[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hofmann"
version = "0.11.1"
description = "A modern Python reimagining of the XBS ball-and-stick crystal structure viewer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Benjamin J. Morgan", email = "b.j.morgan@bath.ac.uk"},
]
keywords = ["crystallography", "molecular-visualisation", "ball-and-stick", "xbs", "matplotlib"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "numpy>=1.24",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.urls]
Homepage = "https://github.com/bjmorgan/hofmann"
Documentation = "https://hofmann.readthedocs.io"
Repository = "https://github.com/bjmorgan/hofmann"
Issues = "https://github.com/bjmorgan/hofmann/issues"

[project.optional-dependencies]
pymatgen = ["pymatgen>=2024.1.1"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
docs = [
    "sphinx>=7.0",
    "sphinx-rtd-theme>=2.0",
    "sphinx-autodoc-typehints>=2.0",
]
all = ["hofmann[pymatgen,dev,docs]"]

[tool.setuptools.package-data]
hofmann = ["py.typed", "data/*.json"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
